force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Apts_BracketsThresholdTI__c.field-meta.xml
<CustomField>
    <fullName>Apts_BracketsThresholdTI__c</fullName>
    <label>Brackets Threshold TI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>