force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/APTS_Default__c.field-meta.xml
<CustomField>
    <fullName>APTS_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>