force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Brackets_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Brackets_Threshold__c</fullName>
    <label>Brackets Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>