force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programs</valueSetName>
    </valueSet>
</CustomField>