force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Please enter the Version of the Brochure.</description>
    <label>Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V0</fullName>
            </value>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>V2</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
            <value>
                <fullName>V4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>