force-app/main/default/objects/Apttus_Config2__PriceList__c/validationRules/APTS_Default_Price_List.validationRule-meta.xml
<ValidationRule>
    <fullName>APTS_Default_Price_List</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Apttus_Config2__Active__c) &amp;&amp;  APTS_Default__c</errorConditionFormula>
    <errorMessage>There should be one market, one program &amp; one Default Price list</errorMessage>
</ValidationRule>